# $Id$

2006-03-09	Anton E. Lebedevich	<noiselist@pochta.ru>

	* main/Flow/: initial import.

2006-03-09	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: creation of prototyped classes implemented.

	* core/Form/PrimitiveIdentifier.class.php: for resolving incapsulated
	objects.

	* core/Form/: two last primitives separated from factory file.

	* meta/: all formatting stuff moved to separate class.

	* 0.2.9 released.

2006-03-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/DBValue.class.php: don't quote integer values.

2006-03-03	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/VoodooDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/TransparentDaoWorker.class.php: fourth dao worker
	implemented: lockingless, transparent, greedy and damn fast.

2006-03-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/NamedObjectDAO.class.php: typo spotted.

	* core/Base/NamedObject.class.php: now IdentifiableObject's child.

2006-02-22	Sergey S. Sergeev	<webs.support@gmail.com>

	* main/Utils/HeaderUtils.class.php: bugfixed access to undeclared
	static property.

	* main/DAOs/CommonDaoWorker.class.php,
	main/DAOs/BaseDaoWorker.class.php: uncacheByQuery() moved to
	BaseDaoWorker.

	* main/DAOs/GenericDAO.class.php, main/DAOs/BaseDAO.class.php:
	uncacheByQuery() implemented.

2006-02-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/MyDialect.class.php: is now compatible with MySQL-4.

	* core/DB/ImaginaryDialect.class.php: removed unnecessary quoting
	stuff, since we're using it only for internal purposes.

2006-02-16	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: import/export object is now compatible
	with php-5.0.

2006-02-16	Denis Gabaidulin	<gabaden@gmail.com>

	* core/Form/StripTagsFilter.class.php: support for tags exclusion.

2006-02-15	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: correct handling for MySQL's forcing of single queries.
