@@ -1,6 +1,6 @@
 <?php
 /****************************************************************************
- *   Copyright (C) 2004-2005 by Konstantin V. Arkhipov, Anton E. Lebedevich *
+ *   Copyright (C) 2004-2006 by Konstantin V. Arkhipov, Anton E. Lebedevich *
  *   voxus@onphp.org, noiselist@pochta.ru                                   *
  *                                                                          *
  *   This program is free software; you can redistribute it and/or modify   *
@@ -26,11 +26,9 @@
 		private $errors		= array();
 		private $labels		= array();
 		
-		private $cleanup	= false;
-		
 		public static function create()
 		{
-			return new Form();
+			return new self;
 		}
 		
 		public function getErrors()
@@ -42,13 +40,6 @@
 		{
 			$this->errors	= array();
 			$this->violated	= array();
-			
-			return $this;
-		}
-		
-		public function enableScopeCleanup()
-		{
-			$this->cleanup = true;
 			
 			return $this;
 		}
@@ -153,54 +144,6 @@
 			return $this;
 		}
 		
-		/* void */ public function importObject($object)
-		{
-			$class = new ReflectionClass(get_class($object));
-			
-			foreach ($class->getProperties() as $property) {
-				$name = $property->getName();
-				
-				if (isset($this->primitives[$name])) {
-					
-					$getter = 'get'.ucfirst($name);
-					
-					// hasMethod() is 5.1 only
-					try {
-						if (
-							$class->getMethod($getter)
-							&& ($value = $object->$getter()) !== null
-						) {
-							$this->primitives[$name]->setValue($value);
-						}
-					} catch (ReflectionException $e) {
-						// no such method
-					}
-				}
-			}
-		}
-		
-		public function exportObject($object)
-		{
-			$class = new ReflectionClass(get_class($object));
-			
-			foreach ($this->primitives as $name => $prm) {
-				$setter = 'set'.ucfirst($name);
-				
-				// hasMethod() is 5.1 only
-				try {
-					if (
-						$class->getMethod($setter)
-						&& ($value = $prm->getValue()) !== null
-					)
-						$object->$setter($value);
-				} catch (ReflectionException $e) {
-					// no such method
-				}
-			}
-			
-			return $object;
-		}
-		
 		private function importPrimitive(&$scope, BasePrimitive $prm)
 		{
 			$name	= $prm->getName();
@@ -211,8 +154,6 @@
 					$this->errors[$name] = self::MISSING;
 			} elseif (true === $result) {
 				unset($this->errors[$name]);
-				if ($this->cleanup)
-					unset($scope[$name]);
 			} else
 				$this->errors[$name] = self::WRONG;
 			
@@ -223,10 +164,10 @@
 		 * Assigns specific label for given primitive and error type.
 		 * One more example of horrible documentation style.
 		 *
-		 * @param	$name			string	primitive or rule name
-		 * @param	$errorType		enum	Form::(WRONG|MISSING)
-		 * @param	$label			string	YDFB WTF is this :-) (c) /.
-		 * @return	$this			Form	itself
+		 * @param	$name		string	primitive or rule name
+		 * @param	$errorType	enum	Form::(WRONG|MISSING)
+		 * @param	$label		string	YDFB WTF is this :-) (c) /.
+		 * @return	$this		Form	itself
 		**/
 		private function addErrorLabel($name, $errorType, $label)
 		{
