@@ -1,0 +1,92 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *   voxus@onphp.org                                                       *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+	/**
+	 * @ingroup Form
+	**/
+	final class FormUtils extends StaticFactory
+	{
+		/* void */ public static function object2form(
+			Identifiable $object, Form $form
+		)
+		{
+			$class = new ReflectionClass($object);
+			$primitives = $form->getPrimitiveList();
+			
+			foreach ($class->getProperties() as $property) {
+				$name = $property->getName();
+				
+				if (isset($primitives[$name])) {
+					
+					$getter = 'get'.ucfirst($name);
+					$prm = $primitives[$name];
+					
+					// hasMethod() is 5.1 only
+					try {
+						if (
+							$class->getMethod($getter)
+							&& ($value = $object->$getter()) !== null
+						) {
+							// PrimitiveIdentifier, Enumerations
+							if ($value instanceof Identifiable)
+								$fake = array($name => $value->getId());
+							// PrimitiveDate
+							elseif ($value instanceof Stringable)
+								$fake = array($name => $value->toString());
+							// everything else
+							else
+								$fake = array($name => $value);
+								
+							$form->importOne($name, $fake);
+						}
+					} catch (ReflectionException $e) {
+						// no such method
+					}
+				}
+			}
+		}
+		
+		/* void */ public static function form2object(
+			Form $form, Identifiable $object
+		)
+		{
+			$class = new ReflectionClass($object);
+			
+			foreach ($form->getPrimitiveList() as $name => $prm) {
+				$setter = 'set'.ucfirst($name);
+				
+				// hasMethod() is 5.1 only
+				try {
+					if (
+						$class->getMethod($setter)
+						&& ($value = $prm->getValue()) !== null
+					) {
+						if ($prm instanceof PrimitiveList) {
+							$list = $prm->getList();
+							$value = $list[$value];
+						} elseif ( // magic!
+							$prm->getName() == 'id'
+							&& $value instanceof Identifiable
+						) {
+							$value = $value->getId();
+						}
+						
+						$object->$setter($value);
+					}
+				} catch (ReflectionException $e) {
+					// no such method
+				}
+			}
+		}
+	}
+?>
