@@ -16,11 +16,13 @@
 	**/
 	final class PrimitiveIdentifier extends PrimitiveInteger
 	{
-		private $class	= null;
+		private $class = null;
 		
 		public function setValue($value)
 		{
-			Assert::isTrue($value instanceof $this->class);
+			$className = $this->class->getName();
+			
+			Assert::isTrue($value instanceof $className);
 			
 			return parent::setValue($value);
 		}
@@ -36,12 +38,17 @@
 			
 			Assert::isTrue(
 				$class->implementsInterface('DAOConnected'),
-				"class '{$class}' should implement DAOConnected interface"
+				"class '{$class->getName()}' should implement DAOConnected interface"
 			);
 			
 			$this->class = $class;
 			
 			return $this;
+		}
+		
+		public function dao()
+		{
+			return call_user_func(array($this->class->getName(), 'dao'));
 		}
 		
 		public function import(&$scope)
@@ -51,12 +58,11 @@
 					"no defined class for PrimitiveIdentifier '{$this->name}'"
 				);
 			
-			if (parent::import($scope)) {
+			$result = parent::import($scope);
 				
-				$dao = call_user_method_array(array($this->class, 'dao'));
-				
+			if ($result === true) {
 				try {
-					$this->value = $dao->getById($this->value);
+					$this->value = $this->dao()->getById($this->value);
 				} catch (ObjectNotFoundException $e) {
 					return false;
 				}
@@ -64,7 +70,7 @@
 				return true;
 			}
 			
-			return false;
+			return $result;
 		}
 	}
 ?>
